frontend/test/should_pass/typeof_002.grg
using typeof_model_001;

rule r1 {
  x:Chunk -c:chunkIn-> y:Chunk;
  x       -:equivTo->  v:Chunk;
  modify {
    v -:typeof(c)-> y;
    delete(c);
  }
} 