frontend/test/should_fail/reuse_010.grg
rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	modify {
		delete(x);
		-e->;
	}
}
